Alignment issues

--- a/wp-content/themes/allergenics/style.css
+++ b/wp-content/themes/allergenics/style.css
@@ -999,6 +999,9 @@ background: #f1632a none repeat scroll 0 0;
 .services-block .text-info-block {
 	padding: 0 17px 0 11px;
 }
+
+
+
 .services-block .btn,
 .services-block .comment-form input[type="submit"],
 .comment-form .services-block input[type="submit"],
@@ -1816,7 +1819,7 @@ p.form-submit input#submit:hover {
 #blog_banner .banner-left {
     float: left;
     margin-right: 20px;
-    width: calc(100% - 263px);
+    width: calc(100% - 306px);
 }
 
 #blog_banner a {
@@ -2690,15 +2693,27 @@ body .form-section .ginput_container img.ui-datepicker-trigger {
 
 /* urgent box */
 
+/* cart alignment */
+
+.woocommerce-cart .shop_table .product-remove {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    width: 53px;
+}
+
+.woocommerce-cart .shop_table .product-thumbnail {
+    width: 57px;
+}
+
 .urgent-box {
     background: #eaf7f3 none repeat scroll 0 0;
     border: 1px solid #e4e4e4;
     border-radius: 3px;
     float: left;
     margin-bottom: 1em;
-    margin-left: 118px;
-    max-width: 460px;
-    padding: 25px;
+    margin-left: 65px;
+    max-width: 470px;
+    padding: 13px 20px 18px;
     width: 100%;
 }
 
@@ -2975,6 +2990,10 @@ display:none
  width:49%;
  float:right;
  margin-left:1%}
+ 
+.order-right .whats-next {
+    padding-top: 46px;
+}
  
 .order-one .order-left, .order-one .order-right {
     border-top: 1px dashed #00263c;
@@ -3541,6 +3560,10 @@ li#wpmenucartli {
     float: none;
     margin-left: 0;
     width: 100%;
+}
+
+.order-right .whats-next {
+    padding-top:0;
 }
 
 .woocommerce table.shop_table_responsive tr td::before, .woocommerce-page table.shop_table_responsive tr td::before {
